Fetch quote completed

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     </div>
 
     <div class="main">
+        <div class="quote">
+            <!-- content will go here  -->
+        </div>
+        <button class="new-quote-btn">New Quote</button>
     </div>
 
     <div class="footer">
-
+        
     </div>
 
     <script src="./js/main.js"></script>
