--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="header">
+    <div class="header green">
         <h1>Quote of the day</h1>
     </div>
 
@@ -18,7 +18,7 @@
         <button class="new-quote-btn">New Quote</button>
     </div>
 
-    <div class="footer">
+    <div class="footer green">
         
     </div>
 
