--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote of the day</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <div class="header green">
         <h1>Quote of the day</h1>
@@ -15,13 +17,16 @@
         <div class="quote">
             <!-- content will go here  -->
         </div>
-        <button class="new-quote-btn">New Quote</button>
+        <button class="new-quote-btn green">New Quote</button>
+        <img src="https://i.picsum.photos/id/502/200/200.jpg?hmac=c6mcZ5mcmjadIeDKaJClpvPz9R9-X9q6c0Un-n73Kv4"
+            width="200px" height="200px" />
     </div>
 
     <div class="footer green">
-        
+
     </div>
 
     <script src="./js/main.js"></script>
 </body>
+
 </html>
